* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.5.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
- Add RockyLinux 8 support

* Sat Jan 22 2022 Dan Barr <drb45@arl.psu.edu> - 0.3.1
- Upate DoD banner text

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.1
- Removed EL6 support

* Mon Dec 16 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Add EL8 support

* Thu Aug 15 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1-0
- Fix compliance engine data

* Tue Jul 23 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.0-0
- Add REFERENCE.md for Puppet Forge

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 0.1.0-0
- Add v2 compliance_markup data
- Add support for puppetlabs-stdlib 6

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.4-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Tue Dec 11 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 0.0.4-0
- Add source parameter to be able to specify a file for use directly
  within hiera data

* Wed Nov 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
- Update static assets
- Update to onyxpoint OEL boxes in acceptance tests
- Update badges in README.md

* Mon Jun 25 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3-0
- Removed the static banners from the module and tied the module to the
  `simp/simp_banners` module
- Add support for OEL and Puppet 5

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Thu Dec 15 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
- First cut